<resources>
    <string name="app_name">Unidad 5</string>
    <string name="title_preferences">Preferences</string>
    <string name="title_ficheros">Ficheros</string>
    <string name="title_bbdd">BBDD</string>
    <string name="title_contentprovider">ContentProvider</string>
    <string name="hello_blank_fragment">hello blank fragment</string>
    <string name="txtcontentprovider">Implementado en la BBDD</string>

    <!-- Shared -->
    <string name="etiquetanombre">Indique su nombre</string>
    <string name="etiquetnick">Indique su nick</string>
    <string name="botonnombre">Guardar nombre</string>
    <string name="botonnick">Guardar nick</string>
    <string name="botontodo">Guardar Todo</string>
    <string name="botonmostrartodo">Mostrar en Textview</string>
    <string name="hello_world">Hello world!</string>
    <string name="textoboton">Preferencias</string>
    <string name="botonxml">Preferencias, pero xml</string>
    <string name="mostrarxml">Mostrar Preferencias, pero las del xml</string>
    <string name="textMusica">Música</string>
    <string-array name="nivel">
        <item>Para niños</item>
        <item>Fácil</item>
        <item>Normal</item>
        <item>Difícil</item>
        <item>Imposible</item>
    </string-array>
    <string-array name="codigonivel">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
    </string-array>
    <string-array name="niveles">
        <item>Mundo 1</item>
        <item>Mundo 2</item>
        <item>Mundo 3</item>
        <item>Mundo 4</item>
        <item>Mundo 5</item>
    </string-array>
    <string-array name="codigoniveles">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
    </string-array>

    <!-- Ficheros -->
    <string name="txtGuardar">Texto a guardar:</string>
    <string name="txtMostrar">Texto leído:</string>
    <string name="btnGuardar">Guardar</string>
    <string name="btnLeer">Leer</string>
    <string name="txtFicheroInterno">Fichero Interno</string>
    <string name="txtFicheroExterno">Fichero Externo</string>
    <string name="txtFicheroRaw">Fichero Raw</string>

    <!-- BBDD -->
    <string name="bbdd_cabecera">Introducir datos nuevo Lugar</string>
    <string name="bbdd_lbl_nombre">Nombre</string>
    <string name="bbdd_lbl_direccion">Dirección</string>
    <string name="bbdd_lbl_telefono">Teléfono</string>
    <string name="bbdd_btn_guardar">Almacenar datos lugar</string>
    <string name="bbdd_lbl_contador">Número de registros</string>
    <string name="bbdd_lbl_total"></string>
    <string name="bbdd_btn_eliminar">Eliminar Lugar</string>
</resources>